@@ -3,6 +3,10 @@
 
 #define NEUG_PRE_LOOP 32
 
+#define NEUG_MODE_CONDITIONED 0
+#define NEUG_MODE_RAW_LSB     1
+#define NEUG_MODE_RAW_DATA    2
+
 void neug_init (uint32_t *buf, uint8_t size);
 void neug_prng_reseed (void);
 uint32_t neug_get (int kick);
@@ -10,4 +14,4 @@ void neug_kick_filling (void);
 void neug_flush (void);
 void neug_wait_full (void);
 void neug_fini (void);
-void neug_select (uint8_t raw);
+void neug_mode_select (uint8_t mode);
