@@ -1,3 +1,9 @@
+2012-09-28  Niibe Yutaka  <gniibe@fsij.org>
+
+	* src/random.c (neug_mode_select): Rename (was: neug_select).
+	Implement raw sample data output mode (with NEUG_MODE_RAW_DATA),
+	raw lsb data (before conditioning) is with NEUG_MODE_RAW_LSB.
+
 2012-09-27  Niibe Yutaka  <gniibe@fsij.org>
 
 	* src/random.c (ep_process): Feedback "additiona input" is now
